# sdl

./: .gitignore  CHANGELOG.md  Makefile  README.md  sdl.cabal
.lsp/.cache/: db.transit.json
app/: Main.hs
env/: docker-compose.yml  init.sql  init_competitions.sql  init_projects.sql  memo.sql
src/Domain/: ApplyStageUser.hs  Client.hs  Project.hs  ProjectApplicant.hs  ProjectWorker.hs  Recruit.hs  SecondStageProjectApplicant.hs  Stage.hs  Worker.hs
src/Driver/: DB.hs  FirstStageProjectApplicantDriver.hs  ProjectApplicantDriver.hs  ProjectDriver.hs  ProjectWorkerDriver.hs  RecruitDriver.hs  SecondStageProjectApplicantDriver.hs
src/Gateway/: FirstStageProjectApplicantGateway.hs  ProjectApplicantGateway.hs  ProjectGateway.hs  ProjectWorkerGateway.hs  RecruitGateway.hs  SecondStageProjectApplicantGateway.hs
src/Port/: FirstStageProjectApplicantPort.hs  ProjectApplicantPort.hs  ProjectPort.hs  ProjectWorkerPort.hs  RecruitPort.hs  SecondStageProjectApplicantPort.hs
src/UseCase/: GetRecruit.hs  ListApplyingRecruits.hs  ListFirstStageProjectApplicants.hs  ListProjectApplicants.hs  ListProjectWorkers.hs  ListProjects.hs  ListRecruits.hs  ListSecondStageProjectApplicants.hs
test/DomainTest/: ASpec.hs
test/UseCaseTest/: GetRecruitSpec.hs
