cabal-version:       2.2

name:                sdl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sdl#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:
    Driver.DB
    Domain.Client
    Domain.Recruit
    Port.RecruitPort
    Gateway.RecruitGateway
    UseCase.GetRecruit
    Driver.RecruitDriver

    Domain.Project
    Port.ProjectPort
    Gateway.ProjectGateway
    UseCase.ListProjects
    Driver.ProjectDriver

    Domain.ProjectApplicant
    Port.ProjectApplicantPort
    Gateway.ProjectApplicantGateway
    UseCase.ListProjectApplicants
    Driver.ProjectApplicantDriver

    Port.FirstStageProjectApplicantPort
    Gateway.FirstStageProjectApplicantGateway
    UseCase.ListFirstStageProjectApplicants
    Driver.FirstStageProjectApplicantDriver

    Domain.Worker

    Domain.SecondStageProjectApplicant
    Port.SecondStageProjectApplicantPort
    Gateway.SecondStageProjectApplicantGateway
    UseCase.ListSecondStageProjectApplicants
    Driver.SecondStageProjectApplicantDriver
  build-depends:
    base >= 4.7 && < 5
    , mtl
    , postgresql-simple
    , uuid
    , uuid-orphans
    , time
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable sdl
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
    base
    , sdl
    , postgresql-simple
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite sdl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
    UseCaseTest.GetRecruitSpec
  build-depends:       base
                     , sdl
                     , hspec
                     , QuickCheck
  build-tool-depends: hspec-discover:hspec-discover
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/githubuser/sdl
