cabal-version:       2.2

name:                sdl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sdl#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:
    Driver.DB
    
    Driver.ProjectWorkerDriver
    Gateway.ProjectWorkerGateway
    Domain.ProjectWorker
    Port.ProjectWorkerPort
    UseCase.ListProjectWorkers

    Driver.RecruitDriver
    Gateway.RecruitGateway
    Domain.Recruit
    Port.RecruitPort
    UseCase.ListRecruits
  build-depends:
    base >= 4.7 && < 5
    , mtl
    , postgresql-simple
    , uuid
    , uuid-orphans
    , time
    , text
    , bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable sdl
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
    base
    , sdl
    , postgresql-simple
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite sdl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
  build-depends:       base
                     , sdl
                     , hspec
                     , QuickCheck
                     , time
  build-tool-depends: hspec-discover:hspec-discover
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/githubuser/sdl
